Added lower nav bar with social media links.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 		<meta name="author" content="Jason Howie">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Home | Jason Howie</title>
+		<!-- Font Awesome CDN -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<!-- bootstrap CDN -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="stylesheet" href="styles/styles.css">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="navbarToggleExternalContent">
@@ -24,13 +27,13 @@
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">Portfolio</a>
 		      </li>
-		      <li class="nav-item">
+		      <!-- <li class="nav-item">
 		        <a class="nav-link" href="#">Contact</a>
-		      </li>
+		      </li> -->
 		    </ul>
 		  </div>
 		</nav>
-		<div class="jumbotron jumbotron-fluid">
+		<div class="jumbotron">
 		  <div class="container">
 		    <h1 class="display-4">Jason Howie</h1>
 		    <p class="lead">Aspiring Web Developer</p>
@@ -43,13 +46,27 @@
 			finished the Inroduction to Programming Nanodegree with Udacity, and I plan on going into a second Nanodegree to 
 			further my education. I am versed in HTML, CSS, JavaScript (+ JQuery), Development tools (Git, Github), Python and
 			Bootstrap. I am always pursuing to learn more, create and experience new technology.</p>
-			<img src="img/jason.jpg" class="img-fluid mx-auto d-block" alt="Jason in the Metropolitan Opera House in New York City.">
+
+			<img src="img/jason.jpg" class="rounded img-fluid mx-auto d-block" alt="Jason in the Metropolitan Opera House in New York City.">
+
 			<p>Before I took the journey on the life of a programming, I was pursuing a degree in Music. Vocal Performance to be
 			exact. I have a passion in performing and have performed in everything from Operas to contemporary acapella-pop groups
 			and everything in between. I went to Kent State Universty and graduated with a degree in Music with a concentration in
 			Vocal Performance. Although I loved performance I felt I needed to make myself more marketable, and found programming 
 			which I am starting to enjoy just as much.</p>
+
 		</div>
+
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container float-left">
+		  		<p>Jason Howie 2018</p>
+		  	</div>
+		  	<div class=" float-right">
+		  		<a href="https://github.com/bt93" target="_blank" class="float-right"><i class="fab fa-github"></i></a>
+		  		<a href="https://twitter.com/howhow1" target="_blank" class="float-right"><i class="fab fa-twitter"></i></a>
+		  	</div>
+		</nav>
+
 		<!-- JQuery CDN -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<!-- bootstrap.js CDN -->
