Added portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="Jason Howie Developer">
 		<meta name="author" content="Jason Howie">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Home | Jason Howie</title>
+		<title>Portfolio | Jason Howie</title>
 		<!-- Font Awesome CDN -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<!-- bootstrap CDN -->
@@ -22,10 +22,10 @@
 		  <div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="index.html">Home</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="portfolio.html">Portfolio</a>
+		        <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
 		      </li>
 		      <!-- <li class="nav-item">
 		        <a class="nav-link" href="#">Contact</a>
@@ -40,23 +40,8 @@
 		  </div>
 		</div>
 		<div class="container">
-			<h1>About Me</h1>
-			<p>My name is Jason Howie. I am an aspiring Web developer looking to further my education in programming and
-			potentially find full-time work doing it. Currently I have spent about six months learning programming and I recently
-			finished the Inroduction to Programming Nanodegree with Udacity, and I plan on going into a second Nanodegree to 
-			further my education. I am versed in HTML, CSS, JavaScript (+ JQuery), Development tools (Git, Github), Python and
-			Bootstrap. I am always pursuing to learn more, create and experience new technology.</p>
-
-			<img src="img/jason.jpg" class="rounded img-fluid mx-auto d-block" alt="Jason in the Metropolitan Opera House in New York City.">
-
-			<p>Before I took the journey on the life of a programming, I was pursuing a degree in Music. Vocal Performance to be
-			exact. I have a passion in performing and have performed in everything from Operas to contemporary acapella-pop groups
-			and everything in between. I went to Kent State Universty and graduated with a degree in Music with a concentration in
-			Vocal Performance. Although I loved performance I felt I needed to make myself more marketable, and found programming 
-			which I am starting to enjoy just as much.</p>
-
+			
 		</div>
-
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container float-left">
 		  		<p>Jason Howie 2018</p>
