Edits made to the profile page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 		</div>
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light stickied-bottom">
 			<div class="container float-left">
 		  		<p>Jason Howie 2018</p>
 		  	</div>
