--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -40,9 +40,18 @@
 		  </div>
 		</div>
 		<div class="container">
-			
+			<h1>Portfolio</h1>
+			<div class="card mb-3">
+			  <img class="card-img-top" src="../img/screenshot_2.png" alt="screenshot of Memory Game">
+			  <div class="card-body">
+			    <h5 class="card-title">Memory Game Project</h5>
+			    <p class="card-text">This was my final project for Udacity's Introduction to Programming Nanodegree.
+			    To play click on a card an try to match it. If you guess all the cards correctly a modal will pop up telling you
+				that you win. You can play it <a href="https://bt93.github.io/memory-game/" target="_blank">here</a>. You can veiw the github repo <a href="https://github.com/bt93/memory-game" target="blank">here</a>.</p>
+			  </div>
+			</div>
 		</div>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-bottom">
 			<div class="container float-left">
 		  		<p>Jason Howie 2018</p>
 		  	</div>
