--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="keywords" content="Jason Howie Developer">
 		<meta name="author" content="Jason Howie">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" href="img/favicon.ico">
 		<title>Home | Jason Howie</title>
 		<!-- Font Awesome CDN -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
