--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="styles/styles.css">
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="navbarToggleExternalContent">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="navbarToggleExternalContent">
 		  <a class="navbar-brand" href="#">Jason Howie</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
 
 		</div>
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light stickied-bottom">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-bottom">
 			<div class="container float-left">
 		  		<p>Jason Howie 2018</p>
 		  	</div>
