--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="styles/styles.css">
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="navbarToggleExternalContent">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="navbarToggleExternalContent">
 		  <a class="navbar-brand" href="#">Jason Howie</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
