--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -48,7 +48,18 @@
 			    <h5 class="card-title">Memory Game Project</h5>
 			    <p class="card-text">This was my final project for Udacity's Introduction to Programming Nanodegree.
 			    To play click on a card an try to match it. If you guess all the cards correctly a modal will pop up telling you
-				that you win. You can play it <a href="https://bt93.github.io/memory-game/" target="_blank">here</a>. You can veiw the github repo <a href="https://github.com/bt93/memory-game" target="blank">here</a>.</p>
+				that you win.</p> 
+				<p>You can play it <a href="https://bt93.github.io/memory-game/" target="_blank">here</a>. You can view the github repo <a href="https://github.com/bt93/memory-game" target="blank">here</a>.</p>
+			  </div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="card mb-3">
+			  <img class="card-img-top" src="../img/quiz_screenshot.png" alt="screenshot of Memory Game">
+			  <div class="card-body">
+			    <h5 class="card-title">Code Your Own Quiz</h5>
+			    <p class="card-text">This was a simple game created with Python. Upon opening the program you are given a choice between three levels of difficulty. When you type in a level you'll be asked to give a certain number of tries you'd like and then you'll try to type in the correct answer.</p>
+			    <p>You can view the github repo <a href="https://github.com/bt93/myquiz" target="blank">here</a>.</p>
 			  </div>
 			</div>
 		</div>
