--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -55,11 +55,24 @@
 		</div>
 		<div class="container">
 			<div class="card mb-3">
-			  <img class="card-img-top" src="../img/quiz_screenshot.png" alt="screenshot of Memory Game">
+			  <img class="card-img-top" src="../img/baps.png" alt="screenshot of build your own website project">
+			  <div class="card-body">
+			    <h5 class="card-title">Build a Portfolio Site Project</h5>
+			    <p class="card-text">This is a simple website created for Udacity's Front-End Nanodegree. In this project
+			    I was given a website design in <a href="https://github.com/bt93/Build-a-Portfolio-Site/blob/master/images/design-mockup-portfolio.pdf" target="_blank">PDF</a> form and recreated it with HTML and CSS. Though it is not my actual
+				profile website, I used it to demenstrate my abilities in responsive design. I used a mobile first aproach when
+				putting this page together.</p>
+			    <p>You can view it <a href="https://bt93.github.io/Build-a-Portfolio-Site/" target="_blank">here</a>. You can view the github repo <a href="https://github.com/bt93/Build-a-Portfolio-Site" target="_blank">here</a>.</p>
+			  </div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="card mb-3">
+			  <img class="card-img-top" src="../img/quiz_screenshot.png" alt="screenshot of Code Your own quiz">
 			  <div class="card-body">
 			    <h5 class="card-title">Code Your Own Quiz</h5>
 			    <p class="card-text">This was a simple game created with Python. Upon opening the program you are given a choice between three levels of difficulty. When you type in a level you'll be asked to give a certain number of tries you'd like and then you'll try to type in the correct answer.</p>
-			    <p>You can view the github repo <a href="https://github.com/bt93/myquiz" target="blank">here</a>.</p>
+			    <p>You can view the github repo <a href="https://github.com/bt93/myquiz" target="_blank">here</a>.</p>
 			  </div>
 			</div>
 		</div>
