--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,4 +4,12 @@ title: Blog
 ---
 <div class="container">
 	<h1>Blog</h1>
+	<ul>
+	  {% for post in site.posts %}
+	    <li>
+	      <p><a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%a - %B %-d, %Y" }}</p>
+	      {{ post.excerpt }}
+	    </li>
+	  {% endfor %}
+	</ul>
 </div>
