--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,7 @@ title: Blog
 ---
 <div class="container">
 	<h1>Blog</h1>
-	<ul>
+	<ul class="blog-list">
 	  {% for post in site.posts %}
 	    <li>
 	      <p><a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%a - %B %-d, %Y" }}</p>
