--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,8 +7,10 @@ title: Blog
 	<ul class="blog-list">
 	  {% for post in site.posts %}
 	    <li>
-	      <p><a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%a - %B %-d, %Y" }}</p>
+	      <h2>{{ post.title }}</h2>  
+	      <small>{{ post.date | date: "%a - %B %-d, %Y" }}</small>
 	      {{ post.excerpt }}
+	      <a href="{{ post.url }}">Read More</a>
 	    </li>
 	  {% endfor %}
 	</ul>
