Added few changes to default.html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@ title: Home
 ---
 <div class="container">
 	<h1>About Me</h1>
+
+	<img src="img/jason.jpg" class="rounded img-fluid mx-auto d-block thumb-nail" alt="Jason in the Metropolitan Opera House in New York City.">
+	
 	<p>My name is Jason Howie. I am an aspiring Web developer looking to further my education in programming and
 	potentially find full-time work doing it. Currently I have spent about six months learning programming and I recently
 	finished the Inroduction to Programming Nanodegree with Udacity, and I plan on going into a second Nanodegree to 
-	further my education. I am versed in HTML, CSS, JavaScript (+ JQuery), Development tools (Git, Github), Python and
-	Bootstrap. I am always pursuing to learn more, create and experience new technology.</p>
-
-	<img src="img/jason.jpg" class="rounded img-fluid mx-auto d-block" alt="Jason in the Metropolitan Opera House in New York City.">
+	further my education. I am always pursuing to learn more, create and experience new technology.</p>
+	<p><strong>I am versed in:</strong></p>
+	<ul>
+		<li>HTML</li>
+		<li>CSS</li>
+		<li>JavaScript (+ JQuery)</li>
+		<li>Development Tools (Command Line, Git & Github)</li>
+		<li>Python</li>
+		<li>Bootstrap</li>
+		<li>Jekyll</li>
+	</ul>
 
 	<p>Before I took the journey on the life of a programming, I was pursuing a degree in Music. Vocal Performance to be
 	exact. I have a passion in performing and have performed in everything from Operas to contemporary acapella-pop groups
