--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,7 +7,7 @@ title: Portfolio
 	<div class="card mb-3">
 	  <img class="card-img-top" src="../img/screenshot_2.png" alt="screenshot of Memory Game">
 	  <div class="card-body">
-	    <h5 class="card-title"><a href="https://bt93.github.io/memory-game/" target="_blank">Memory Game Project</a></h5>
+	    <h5 class="card-title"><a href="https://jasonrhowie.com/memory-game/" target="_blank">Memory Game Project</a></h5>
 	    <p class="card-text">This was my final project for Udacity's Introduction to Programming Nanodegree.
 	    To play click on a card an try to match it. If you guess all the cards correctly a modal will pop up telling you
 		that you win.</p> 
@@ -19,12 +19,12 @@ title: Portfolio
 	<div class="card mb-3">
 	  <img class="card-img-top" src="../img/baps.png" alt="screenshot of build your own website project">
 	  <div class="card-body">
-	    <h5 class="card-title"><a href="https://bt93.github.io/Build-a-Portfolio-Site/" target="_blank">Build a Portfolio Site Project</a></h5>
+	    <h5 class="card-title"><a href="https://jasonrhowie.com/Build-a-Portfolio-Site/" target="_blank">Build a Portfolio Site Project</a></h5>
 	    <p class="card-text">This is a simple website created for Udacity's Front-End Nanodegree. In this project
 	    I was given a website design in <a href="https://github.com/bt93/Build-a-Portfolio-Site/blob/master/images/design-mockup-portfolio.pdf" target="_blank">PDF</a> form and recreated it with HTML and CSS. Though it is not my actual
 		profile website, I used it to demenstrate my abilities in responsive design. I used a mobile first aproach when
 		putting this page together.</p>
-	    <p>View the <a href="https://github.com/bt93/Build-a-Portfolio-Site" target="_blank">github repo</a></p>
+	    <p>View the <a href="https://github.com/bt93/Build-a-Portfolio-Site" target="_blank">github repo</a>.</p>
 	  </div>
 	</div>
 	</div>
@@ -32,7 +32,7 @@ title: Portfolio
 	<div class="card mb-3">
 	  <img class="card-img-top" src="../img/quiz_screenshot.png" alt="screenshot of Code Your own quiz">
 	  <div class="card-body">
-	    <h5 class="card-title">Code Your Own Quiz</h5>
+	    <h5 class="card-title">Code Your Own Quiz Project</h5>
 	    <p class="card-text">This was a simple game created with Python. Upon opening the program you are given a choice between three levels of difficulty. When you type in a level you'll be asked to give a certain number of tries you'd like and then you'll try to type in the correct answer.</p>
 	    <p>View the <a href="https://github.com/bt93/myquiz" target="_blank">github repo</a>.</p>
 	  </div>
