Made portfolio images smaller. Changed some styles too

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@ title: Home
 ---
 <div class="container">
 	<h1>About Me</h1>
-
-	<img src="img/jason.jpg" class="rounded img-fluid mx-auto d-block thumb-nail" alt="Jason in the Metropolitan Opera House in New York City.">
-	
+	<figure>
+		<img src="img/jason.jpg" class="rounded img-fluid mx-auto d-block thumb-nail" alt="Jason Howie.">
+		<figcaption>Jason Howie at the Metropolitan Opera House in New York City</figcaption>
+	</figure>
 	<p>My name is Jason Howie. I am an aspiring Web developer looking to further my education in programming and
 	potentially find full-time work doing it. Currently I have spent about six months learning programming and I recently
 	finished the Introduction to Programming Nanodegree with Udacity, and I plan on going into a second Nanodegree to 
