--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,7 +5,7 @@ title: Portfolio
 <div class="container">
 	<h1>Portfolio</h1>
 	<div class="card mb-3">
-	  <img class="card-img-top" src="../img/screenshot_2.png" alt="screenshot of Memory Game">
+	  <img class="card-img-top" src="../img/screenshot_2.png" alt="Memory Game">
 	  <div class="card-body">
 	    <h5 class="card-title"><a href="https://jasonrhowie.com/memory-game/" target="_blank">Memory Game Project</a></h5>
 	    <p class="card-text">This was my final project for Udacity's Introduction to Programming Nanodegree.
@@ -17,7 +17,7 @@ title: Portfolio
 	</div>
 	<div class="container">
 	<div class="card mb-3">
-	  <img class="card-img-top" src="../img/baps.png" alt="screenshot of build your own website project">
+	  <img class="card-img-top" src="../img/baps.png" alt="Build your own website project">
 	  <div class="card-body">
 	    <h5 class="card-title"><a href="https://jasonrhowie.com/Build-a-Portfolio-Site/" target="_blank">Build a Portfolio Site Project</a></h5>
 	    <p class="card-text">This is a simple website created for Udacity's Front-End Nanodegree. In this project
@@ -30,7 +30,7 @@ title: Portfolio
 	</div>
 	<div class="container">
 	<div class="card mb-3">
-	  <img class="card-img-top" src="../img/quiz_screenshot.png" alt="screenshot of Code Your own quiz">
+	  <img class="card-img-top" src="../img/quiz_screenshot.png" alt="Code Your own quiz">
 	  <div class="card-body">
 	    <h5 class="card-title">Code Your Own Quiz Project</h5>
 	    <p class="card-text">This was a simple game created with Python. Upon opening the program you are given a choice between three levels of difficulty. When you type in a level you'll be asked to give a certain number of tries you'd like and then you'll try to type in the correct answer.</p>
