Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 <div class="container">
-	<h1>About Me</h1>
+	<h1 class="editable">About Me</h1>
 	<figure>
 		<img src="img/jason.jpg" class="rounded img-fluid mx-auto d-block thumb-nail" alt="Jason Howie.">
 		<figcaption>Jason Howie at the Metropolitan Opera House in New York City</figcaption>
