Added arcade game to portfolio

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -6,6 +6,16 @@ permalink: /portfolio/
 <div class="container">
 	<h1>Portfolio</h1>
 	<div class="card mb-3">
+	  <img class="card-img-top" src="../img/arcade_screenshot.png" alt="Arcade Game">
+	  <div class="card-body">
+	    <h5 class="card-title"><a href="https://jasonrhowie.com/arcade-game" target="_blank">Arcade Game Project</a></h5>
+	    <p class="card-text">A recreation of the video game "Frogger" for Udacity's Front-End Web Development Nanodegree.
+	    Try to reach the water using the arrow keys on your keyboard without colliding with the enemy bugs. If you reach the end, you get a point. If you collide with a bug, you lose a life. If you get to zero lives, you go back to zero points.
+		This game was used to demonstrate knowledge in object-oriented JavaScript.</p> 
+		<p>View the  <a href="https://github.com/bt93/arcade-game" target="blank">github repo</a>.</p>
+	  </div>
+	</div>
+	<div class="card mb-3">
 	  <img class="card-img-top" src="../img/screenshot_2.png" alt="Memory Game">
 	  <div class="card-body">
 	    <h5 class="card-title"><a href="https://jasonrhowie.com/memory-game/" target="_blank">Memory Game Project</a></h5>
