--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-<div class="container animated bounceInLeft">
+<div class="container">
 	<h1>About Me</h1>
 	<figure>
 		<img src="img/jason.jpg" class="rounded img-fluid mx-auto d-block thumb-nail" alt="Jason Howie.">
