Few edits to styles and navbar

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -3,7 +3,7 @@ layout: default
 title: Portfolio
 permalink: /portfolio/
 ---
-<div class="container">
+<div>
 	<h1>Portfolio</h1>
 	<div class="card mb-3">
 	  <img class="card-img-top" src="../img/arcade_screenshot.png" alt="Arcade Game">
