--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: Blog
 permalink: /blog/
 ---
-<div class="container">
+<div>
 	<h1>Blog</h1>
 	<ul>
 	  {% for post in site.posts %}
