--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -6,7 +6,7 @@ permalink: /portfolio/
 <div>
 	<h1>Portfolio</h1>
 	<div class="card mb-3">
-	  <img class="card-img-top" src="../img/arcade_screenshot.png" alt="Arcade Game">
+	  <img class="card-img-top too-big" src="../img/arcade_screenshot.png" alt="Arcade Game">
 	  <div class="card-body">
 	    <h5 class="card-title"><a href="https://jasonrhowie.com/arcade-game" target="_blank">Arcade Game Project</a></h5>
 	    <p class="card-text">A recreation of the video game "Frogger" for Udacity's Front-End Web Development Nanodegree.
