added feedreader project to profile

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -6,6 +6,14 @@ permalink: /portfolio/
 <div>
 	<h1>Portfolio</h1>
 	<div class="card mb-3">
+	  <img class="card-img-top too-big" src="../img/feedreader.png" alt="Feedreader">
+	  <div class="card-body">
+	    <h5 class="card-title"><a href="https://jasonrhowie.com/feedreader" target="_blank">Feed Reader Project</a></h5>
+	    <p class="card-text">In this project I was given a web-based application that reads RSS feeds. I had to create a number of test using Jasmine that test the functionality of the application. The files already included <a href="http://jasmine.github.io/" target="_blank">Jasmine</a>.</p> 
+		<p>View the  <a href="https://github.com/bt93/feedreader" target="blank">github repo</a>.</p>
+	  </div>
+	</div>
+	<div class="card mb-3">
 	  <img class="card-img-top too-big" src="../img/arcade_screenshot.png" alt="Arcade Game">
 	  <div class="card-body">
 	    <h5 class="card-title"><a href="https://jasonrhowie.com/arcade-game" target="_blank">Arcade Game Project</a></h5>
