--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,51 +5,18 @@ permalink: /portfolio/
 ---
 <div>
 	<h1>Portfolio</h1>
-	<div class="card mb-3">
-	  <img class="card-img-top too-big" src="../img/feedreader.png" alt="Feedreader">
-	  <div class="card-body">
-	    <h5 class="card-title"><a href="https://jasonrhowie.com/feedreader" target="_blank">Feed Reader Project</a></h5>
-	    <p class="card-text">In this project I was given a web-based application that reads RSS feeds. I had to create a number of test using Jasmine that test the functionality of the application. The files already included <a href="http://jasmine.github.io/" target="_blank">Jasmine</a>.</p> 
-		<p>View the  <a href="https://github.com/bt93/feedreader" target="blank">github repo</a>.</p>
-	  </div>
-	</div>
-	<div class="card mb-3">
-	  <img class="card-img-top too-big" src="../img/arcade_screenshot.png" alt="Arcade Game">
-	  <div class="card-body">
-	    <h5 class="card-title"><a href="https://jasonrhowie.com/arcade-game" target="_blank">Arcade Game Project</a></h5>
-	    <p class="card-text">A recreation of the video game "Frogger" for Udacity's Front-End Web Development Nanodegree.
-	    Try to reach the water using the arrow keys on your keyboard without colliding with the enemy bugs. If you reach the end, you get a point. If you collide with a bug, you lose a life. If you get to zero lives, you go back to zero points.
-		This game was used to demonstrate knowledge in object-oriented JavaScript.</p> 
-		<p>View the  <a href="https://github.com/bt93/arcade-game" target="blank">github repo</a>.</p>
-	  </div>
-	</div>
-	<div class="card mb-3">
-	  <img class="card-img-top" src="../img/screenshot_2.png" alt="Memory Game">
-	  <div class="card-body">
-	    <h5 class="card-title"><a href="https://jasonrhowie.com/memory-game/" target="_blank">Memory Game Project</a></h5>
-	    <p class="card-text">This was my final project for Udacity's Introduction to Programming Nanodegree.
-	    To play click on a card an try to match it. If you guess all the cards correctly a modal will pop up telling you
-		that you win.</p> 
-		<p>View the  <a href="https://github.com/bt93/memory-game" target="blank">github repo</a>.</p>
-	  </div>
-	</div>
-	</div>
-	<div class="card mb-3">
-	  <img class="card-img-top" src="../img/baps.png" alt="Build your own website project">
-	  <div class="card-body">
-	    <h5 class="card-title"><a href="https://jasonrhowie.com/Build-a-Portfolio-Site/" target="_blank">Build a Portfolio Site Project</a></h5>
-	    <p class="card-text">This is a simple website created for Udacity's Front-End Nanodegree. In this project
-	    I was given a website design in <a href="https://github.com/bt93/Build-a-Portfolio-Site/blob/master/images/design-mockup-portfolio.pdf" target="_blank">PDF</a> form and recreated it with HTML and CSS. Though it is not my actual
-		profile website, I used it to demenstrate my abilities in responsive design. I used a mobile first aproach when
-		putting this page together.</p>
-	    <p>View the <a href="https://github.com/bt93/Build-a-Portfolio-Site" target="_blank">github repo</a>.</p>
-	  </div>
-	</div>
-	<div class="card mb-3">
-	  <img class="card-img-top" src="../img/quiz_screenshot.png" alt="Code Your own quiz">
-	  <div class="card-body">
-	    <h5 class="card-title">Code Your Own Quiz Project</h5>
-	    <p class="card-text">This was a simple game created with Python. Upon opening the program you are given a choice between three levels of difficulty. When you type in a level you'll be asked to give a certain number of tries you'd like and then you'll try to type in the correct answer.</p>
-	    <p>View the <a href="https://github.com/bt93/myquiz" target="_blank">github repo</a>.</p>
+	<div class="card-deck">
+		{% for project in site.portfolio %}
+			<div class="card">
+				<img class="card-img-top" src="{{ site.baseurl }}/{{ project.image }}" alt="Card image cap">
+				<div class="card-body">
+				  <a href="{{ project.url }}"><h5 class="card-title">{{ project.title }}</h5></a>
+				  <p class="card-text">{{ project.description }}</p>
+				</div>
+				<div class="card-footer">
+				  <small class="text-muted">Created {{ project.created }}</small>
+				</div>
+			</div>
+		{% endfor %}
 	</div>
 </div>
