layout change made to portfolio.html

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,18 +5,19 @@ permalink: /portfolio/
 ---
 <div>
 	<h1>Portfolio</h1>
-	<div class="card-deck">
+	<div class="row">
 		{% for project in site.portfolio %}
+		<div class="col-sm-6 {% if project.title == 'Arcade Game Project' %}too-big{% endif %}">
 			<div class="card">
-				<img class="card-img-top" src="{{ site.baseurl }}/{{ project.image }}" alt="Card image cap">
+				<img class="card-img-top" src="{{ site.baseurl }}/{{ project.image }}" alt="{{ project.title }}">
 				<div class="card-body">
-				  <a href="{{ project.url }}"><h5 class="card-title">{{ project.title }}</h5></a>
-				  <p class="card-text">{{ project.description }}</p>
-				</div>
-				<div class="card-footer">
-				  <small class="text-muted">Created {{ project.created }}</small>
+					<h5 class="card-title">{{ project.title }}</h5>
+					<p class="card-text">{{ project.description }}</p>
+					<p class="card-text"><small class="text-muted">Created: {{ project.created }}</small></p>
+					<a href="{{ project.url }}" class="btn btn-info">View Details</a>
 				</div>
 			</div>
+		</div>
 		{% endfor %}
 	</div>
 </div>
