--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -6,14 +6,15 @@ permalink: /portfolio/
 <div>
 	<h1>Portfolio</h1>
 	<div class="row">
-		{% for project in site.portfolio %}
+		{% assign sorted = site.portfolio | sort: 'date' | reverse %}
+		{% for project in sorted %}
 		<div class="col-sm-6">
 			<div class="card">
-				<img class="card-img-top {% if project.title == 'Arcade Game Project' %}too-big{% endif %}" src="{{ site.baseurl }}/{{ project.image }}" alt="{{ project.title }}">
+				<img class="card-img-top" src="{{ site.baseurl }}/{{ project.image }}" alt="{{ project.title }}">
 				<div class="card-body">
 					<h5 class="card-title">{{ project.title }}</h5>
 					<p class="card-text">{{ project.description }}</p>
-					<p class="card-text"><small class="text-muted">Created: {{ project.created }}</small></p>
+					<p class="card-text"><small class="text-muted">Created: {{ project.date | date: '%B %Y' }}</small></p>
 					<a href="{{ project.url }}" class="btn btn-info">View Details</a>
 				</div>
 			</div>
