--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,7 +10,7 @@ permalink: /portfolio/
 		{% for project in sorted %}
 		<div class="col-sm-6">
 			<div class="card">
-				<img class="card-img-top" src="{{ site.baseurl }}/{{ project.image }}" alt="{{ project.title }}">
+				<img class="card-img-top portfolio" src="{{ site.baseurl }}/{{ project.image }}" alt="{{ project.title }}">
 				<div class="card-body">
 					<h5 class="card-title">{{ project.title }}</h5>
 					<p class="card-text">{{ project.description }}</p>
