add items to list

--- a/index.html
+++ b/index.html
@@ -18,9 +18,19 @@ title: Home
 		<li>CSS</li>
 		<li>JavaScript (+ JQuery)</li>
 		<li>Development Tools (Command Line, Git & Github)</li>
+		<li>Responsive Web Design</li>
+		<li>Web Accessibility</li>
+		<li>ARIA</li>
+		<li>Gulp & Grunt</li>
+		<li>AngularJS</li>
+		<li>Test Driven Development</li>
+		<li>Jasmine</li>
+		<li>AJAX</li>
+		<li>Asynchronous JavaScript</li>
 		<li>Python</li>
 		<li>Bootstrap</li>
 		<li>Jekyll</li>
+		<li>Unix shell</li>
 	</ul>
 	
 	<p>Before I took the journey on the life of a programming, I was pursuing a degree in Music. Vocal Performance to be
