--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ title: Home
 		<img src="img/jason.jpg" class="rounded img-fluid mx-auto d-block thumb-nail" alt="Jason Howie.">
 		<figcaption>Jason Howie at the Metropolitan Opera House in New York City</figcaption>
 	</figure>
-	<p>My name is Jason Howie. I am an aspiring Web developer looking to further my education in programming and
-	potentially find full-time work doing it. Currently I have spent about six months learning programming and I recently
-	finished the Introduction to Programming Nanodegree with Udacity, and I plan on going into a second Nanodegree to 
-	further my education. I am always pursuing to learn more, create and experience new technology.</p>
+	<p>My name is Jason Howie. I am a Front-End Web developer looking to further my education in programming and
+	find full-time work doing it. Currently I have spent about eight months learning programming and I recently
+	finished the Front-End Web Development Nanodegree with Udacity. 
+	I am always pursuing to learn more, create and experience new technology.</p>
 	<p><strong>I am versed in:</strong></p>
 	<ul>
 		<li>HTML</li>
@@ -34,7 +34,7 @@ title: Home
 	</ul>
 	
 	<p>Before I took the journey on the life of a programming, I was pursuing a degree in Music. Vocal Performance to be
-	exact. I have a passion in performing and have performed in everything from Operas to contemporary acapella-pop groups
+	exact. I have a passion in performing and have performed in everything from Operas to contemporary pop-accapella groups
 	and everything in between. I went to Kent State Universty and graduated with a degree in Music with a concentration in
 	Vocal Performance. Although I loved performance I felt I needed to make myself more marketable, and found programming 
 	which I am starting to enjoy just as much.</p>
