--- a/index.html
+++ b/index.html
@@ -38,4 +38,5 @@ title: Home
 	and everything in between. I went to Kent State Universty and graduated with a degree in Music with a concentration in
 	Vocal Performance. Although I loved performance I felt I needed to make myself more marketable, and found programming 
 	which I am starting to enjoy just as much.</p>
+	<p>You can view my Resume <a href="img/job_resume.pdf" target="_blank">here</a>.</p>
 </div>
