--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,7 +6,7 @@ permalink: /blog/
 <div>
 	<h1>Blog</h1>
 	<ul>
-	  {% for post in paginator.posts %}
+	  {% for post in site.posts %}
 	    <li class="{% if forloop.last == true %}last-blog{% endif %} blog-list">
 	      <h2>{{ post.title }}</h2>
 	      <small>{{ post.date | date: "%a - %B %-d, %Y" }}</small>
