--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@ title: Home
 		<figcaption>Jason Howie at the Metropolitan Opera House in New York City</figcaption>
 	</figure>
 	<p>My name is Jason Howie. I am a Front-End Web developer looking to further my education in programming and
-	find full-time work doing it. Currently I have spent about eight months learning programming and I recently
-	finished the Front-End Web Development Nanodegree with Udacity. 
+	find full-time work doing it. Currently I have spent about a year and a half learning programming and am Currently
+	in the Full-Stack JavaScript Techdegree with Treehouse. I also have finished two Nanodegrees with Udacity, including
+	the Intro to Programming and Front-End Web Development Nanodegrees. 
 	I am always pursuing to learn more, create and experience new technology.</p>
 	<p><strong>I am versed in:</strong></p>
 	<ul>
 		<li>HTML</li>
 		<li>CSS</li>
-		<li>JavaScript (+ JQuery)</li>
-		<li>Development Tools (Command Line, Git & Github)</li>
+		<li>JavaScript</li>
+		<li>jQuery</li>
+		<li>Command Line, Git & Github</li>
 		<li>Responsive Web Design</li>
 		<li>Web Accessibility</li>
 		<li>ARIA</li>
 		<li>Gulp & Grunt</li>
-		<li>AngularJS</li>
+		<li>Reactjs</li>
 		<li>Test Driven Development</li>
 		<li>Jasmine</li>
 		<li>AJAX</li>
 		<li>Asynchronous JavaScript</li>
-		<li>Python</li>
+		<li>Nodejs</li>
+		<li>Express</li>
 		<li>Bootstrap</li>
 		<li>Jekyll</li>
-		<li>Unix shell</li>
 	</ul>
 	
 	<p>Before I took the journey on the life of a programming, I was pursuing a degree in Music. Vocal Performance to be
